Expose the object mapper in JpaRestMvcConfigurer as a Spring bean, so it can be re-used for the deserialisation in ResourceApiController#readPayload() method